methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:19: error: expected class or object definition
def trouveLimace() {
^SlugTracking:30: error: Unmatched closing brace '}' ignored here
}
^